update package: change shuji to reverse and urls

--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "shuji",
-  "version": "0.4.0",
+  "name": "reverse.js",
+  "version": "1.0.0",
   "description": "Reverse engineering JavaScript and CSS sources from sourcemaps",
   "main": "index.js",
-  "bin": "bin/shuji.js",
+  "bin": "bin/reverse.js",
   "scripts": {
-    "lint": "eslint index.js bin/shuji.js",
+    "lint": "eslint index.js bin/reverse.js",
     "test": "nyc --exclude tests tape tests/*_test.js && rm -rf tmp",
     "coverage": "nyc --exclude tests report --reporter=text-lcov > coverage.lcov && codecov"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/paazmaya/shuji.git"
+    "url": "git+ssh://git@github.com/davidkevork/reverse.git"
   },
   "keywords": [
     "sourcemap",
     "reverse",
-    "engineering"
+    "engineering",
+    "reverse.js"
   ],
   "files": [
     "bin",
@@ -25,14 +26,17 @@
     "index.js"
   ],
   "author": "Juga Paazmaya <paazmaya@yahoo.com> (https://paazmaya.fi)",
+  "contributors": [
+    "David Kevork <david@davidkevork.me> (https://davidkevork.me)"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/paazmaya/shuji/issues"
+    "url": "https://github.com/davidkevork/reverse/issues"
   },
   "engines": {
     "node": ">=8.11.1"
   },
-  "homepage": "https://github.com/paazmaya/shuji#readme",
+  "homepage": "https://github.com/davidkevork/reverse#readme",
   "dependencies": {
     "fs-extra": "^5.0.0",
     "optionator": "^0.8.2",
@@ -42,7 +46,6 @@
     "babel-eslint": "^8.2.2",
     "codecov": "^3.0.0",
     "eslint": "^4.19.0",
-    "eslint-config-paazmaya": "^4.3.0",
     "nyc": "^11.6.0",
     "tape": "^4.9.0"
   }
